--- a/JwPlayerClone/day02.html
+++ b/JwPlayerClone/day02.html
@@ -18,7 +18,7 @@
 		<div class="header-container">
 			<!-- Logo -->
 			<div class="brand-container">
-				<img src="./JwPlayerClone/images/JWIcon.png" alt="" />
+				<img src="./images/JWIcon.png" alt="" />
 			</div>
 
 			<!-- Main Menu -->
